--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >-
 url: https://tyhsieh4.github.io
 baseurl: ""
 theme: minima
-
+google_analytics: G-FHE55JD0YL
 # Build settings
 markdown: kramdown
 kramdown:
